--- a/.github/workflows/fetch.yml
+++ b/.github/workflows/fetch.yml
@@ -1,9 +1,9 @@
 name: mousedeals
 
-on:
-  schedule:
-    - cron:  '*/6 * * * *'  # every 6 minutes
-  workflow_dispatch:
+#on:
+#  schedule:
+#    - cron:  '*/6 * * * *'  # every 6 minutes
+#  workflow_dispatch:
 
 jobs:
   build:
