--- a/.github/workflows/fetch.yml
+++ b/.github/workflows/fetch.yml
@@ -1,5 +1,10 @@
 name: mousedeals
 
+on:
+  #schedule:
+  #  - cron:  '*/6 * * * *'  # every 6 minutes
+  workflow_dispatch:
+
 jobs:
   build:
     runs-on: ubuntu-latest
